--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
       <a href="https://t.me/Gayrat_Mamataliev" >
         <i class="fab fa-telegram fa-2x"></i>
       </a>
+      <a href="https://github.com/GayratMamataliev" >
+        <i class="fab fa-github fa-2x"></i>
+      </a>
     </div>
   </main>
   <footer id="main-footer">
