--- a/work.html
+++ b/work.html
@@ -63,9 +63,9 @@
           <img src="img/projects/project1.jpg" alt="Project">
         </a>
         <a href="#" class="btn-light">
-          <i class="fas fa-eye"></i> Project
+          <i class="fas fa-eye"></i> Project Sass
         </a>
-        <a href="#" class="btn-dark">
+        <a href="https://github.com/GayratMamataliev/gayrat_portfolio" class="btn-dark">
           <i class="fab fa-github"></i> Github
         </a>
       </div>
