--- a/work.html
+++ b/work.html
@@ -71,6 +71,17 @@
       </div>
       <div class="item">
         <a href="#!">
+          <img src="img/projects/resume.jpg" alt="Project">
+        </a>
+        <a href="#" class="btn-light">
+          <i class="fas fa-eye"></i> My Resume
+        </a>
+        <a href="#" class="btn-dark">
+          <i class="fab fa-github"></i> Resume (CV)
+        </a>
+      </div>
+      <div class="item">
+        <a href="#!">
           <img src="img/projects/project2.jpg" alt="Project">
         </a>
         <a href="#" class="btn-light">
